Add icons and about me

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ web-sys = "0.3.70"
 
 yew = { version = "0.21.0", features = ["csr"] }
 yew-router = "0.18.0"
+yew_heroicons = { git = "https://github.com/voidpumpkin/clone_of_yew_heroicons.git", rev = "aaed79d6ec03eac61da770eb3d990838e39b1138" }
